// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar Component SearchBar handles search but no results 1`] = `
<div>
  <div
    class="nav-bar-menu-item nav-bar-search-container"
  >
    <input
      autocomplete="false"
      class="nav-bar-search"
      data-testid="SEARCH"
      placeholder="PLACEHOLDER"
      type="text"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <div
        data-testid="SEARCH-INIDICATOR"
      />
      has no ref
    </div>
  </div>
</div>
`;

exports[`SearchBar Component SearchBar handles search with only spaces 1`] = `
<div>
  <div
    class="nav-bar-menu-item nav-bar-search-container"
  >
    <input
      autocomplete="false"
      class="nav-bar-search"
      data-testid="SEARCH"
      placeholder="PLACEHOLDER"
      type="text"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      has no ref
    </div>
  </div>
</div>
`;

exports[`SearchBar Component SearchBar handles search with results 1`] = `
<div>
  <div
    class="nav-bar-menu-item nav-bar-search-container"
  >
    <input
      autocomplete="false"
      class="nav-bar-search"
      data-testid="SEARCH"
      placeholder="PLACEHOLDER"
      type="text"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      open
      <div>
        MenuItem
        <div
          data-testid="ITEM1"
        >
          ITEM1
        </div>
      </div>
      <div>
        MenuItem
        <div
          data-testid="ITEM2"
        >
          ITEM2
        </div>
      </div>
      has no ref
    </div>
  </div>
</div>
`;

exports[`SearchBar Component SearchBar renders 1`] = `
<div>
  <div
    class="nav-bar-menu-item nav-bar-search-container"
  >
    <input
      autocomplete="false"
      class="nav-bar-search"
      placeholder="PLACEHOLDER"
      type="text"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      has no ref
    </div>
  </div>
</div>
`;
